# AI-HelpDesk-Management-System-

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
backend/: config.py  database.py  main.py  seed.py  test_channels.py  test_llm.py  test_nlp.py  test_pipeline.py  test_sla.py  test_tavily.py  test_vision.py
backend/channels/: __init__.py  call_handler.py  channel_router.py  chat_handler.py  email_handler.py  imap_poller.py  normalizer.py
backend/ingestion/: base_ingestor.py  document_ingestor.py  extract_pdfs.py  run_ingestion.py  ticket_ingestor.py
backend/ingestion/data/sops/: entra-identity-authentication.txt  microsoft-365-admin-o365-worldwide.txt  (+6 more)
backend/middleware/: rbac.py
backend/models/: knowledge_gap.py  ticket.py  ticket_event.py  user.py
backend/routers/: admin.py  auth.py  chat.py  intake.py  tickets.py
backend/schemas/: __init__.py  auth.py  ticket.py  user.py
backend/services/: ai_pipeline.py  anomaly_services.py  auth_service.py  chat_services.py  digest_service.py  knowledge_gap_service.py  llm_services.py  nlp_services.py  rag_service.py  routing_service.py  sanitizer_service.py  sla_service.py  solution_cache_service.py  stt_service.py  tavily_service.py  ticket_service.py  vision_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ClassificationLegend.jsx  Icons.jsx  Layout.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/lib/: ui.jsx
frontend/src/pages/: Login.jsx
(+12 files in other folders)
