[project]
name = "ai-help-desk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "pydantic[email]==2.7.1",
    "pydantic-settings==2.2.1",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.29.0",
    "email-validator>=2.3.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "alembic==1.13.1",
    "psycopg[binary]>=3.3.4",
    "pg8000>=1.31.5",
    "openai-whisper>=20250625",
    "ffmpeg>=1.4",
]
